<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/text_intro"
            android:textColor="#212121"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Donut Item -->
        <ImageView
            android:id="@+id/donut"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/donuts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_first"
            app:srcCompat="@drawable/donut_circle" />

        <TextView
            android:id="@+id/donut_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/donuts"
            android:textColor="#424242"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/donut"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/donut"
            app:layout_constraintTop_toTopOf="@id/donut" />

        <!-- Ice Cream Item -->
        <ImageView
            android:id="@+id/ice_cream"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/ice_cream_sandwiches"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/donut"
            app:srcCompat="@drawable/icecream_circle" />

        <TextView
            android:id="@+id/ice_cream_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/ice_cream_sandwiches"
            android:textColor="#424242"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/ice_cream"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ice_cream"
            app:layout_constraintTop_toTopOf="@id/ice_cream" />

        <!-- FroYo Item -->
        <ImageView
            android:id="@+id/froyo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/froyo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ice_cream"
            app:srcCompat="@drawable/froyo_circle" />

        <TextView
            android:id="@+id/froyo_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/froyo"
            android:textColor="#424242"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/froyo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/froyo"
            app:layout_constraintTop_toTopOf="@id/froyo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>